--- a/index.html
+++ b/index.html
@@ -18,17 +18,21 @@
   </head>
 
   <body>
-    <div class="main_container">
 
+    <!--Contenedor principal | Main container-->
+    <div class="main_container">
+      <!--Contenedor del texto Hola | Container of the text Hola-->
       <div class="text_hi">
-        <span>H</span>
-        <span>O</span>
-        <span>L</span>
-        <span>A</span>
+        <span class="text_h">H</span>
+        <span class="text_o">O</span>
+        <span class="text_l">L</span>
+        <span class="text_a">A</span>
       </div>
+      <!--Contenedor de texto | Text container-->
       <p class="text">Tengo un regalo para ti!!</p> 
+      <!--Boton | Button-->
       <button class="button" onclick="location.href='html/flowers.html'">
-        Button
+        Click aquí
       </button>
     </div>
 
