--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!--Contenedor de texto | Text container-->
       <p class="text">Tengo un regalo para ti!!</p> 
       <!--Boton | Button-->
-      <button class="button" onclick="location.href='html/flowers.html'">
+      <button class="button" onclick="location.href='pages/flowers.html'">
         Click aquí
       </button>
     </div>
