--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <!--Metadatos | Metadata-->
     <meta charset="utf-8" />
     <meta name="author" content="SiegBoss" />
@@ -14,30 +15,33 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <!--Enklazar CSS Estilo | Link CSS Style-->
-    <link rel="stylesheet" type="text/css" href="style/index.css"/>
-  </head>
+    <link rel="stylesheet" type="text/css" href="style/index.css" />
+</head>
 
-  <body>
+<body>
 
     <!--Contenedor principal | Main container-->
     <div class="main_container">
-      <!--Contenedor del texto Hola | Container of the text Hola-->
-      <div class="text_hi">
-        <span class="text_h">H</span>
-        <span class="text_o">O</span>
-        <span class="text_l">L</span>
-        <span class="text_a">A</span>
-      </div>
-      <!--Contenedor de texto | Text container-->
-      <p class="text">Tengo un regalo para ti!!</p> 
-      <!--Boton | Button-->
-      <button class="button" onclick="location.href='pages/flowers.html'">
-        Click aquí
-      </button>
+        <!--Contenedor del texto Hola | Container of the text Hola-->
+        <div class="text_hi">
+            <span class="text_h">H</span>
+            <span class="text_o">O</span>
+            <span class="text_l">L</span>
+            <span class="text_a">A</span>
+        </div>
+        <!--Contenedor de texto | Text container-->
+        <p class="text">Tengo un regalo para ti!!</p>
+        <!--Boton | Button-->
+        <button class="button" onclick="location.href='pages/flowers.html'">
+            Click aquí
+        </button>
     </div>
-    
+
     <!--Enlazar a Bootstrap | Link to Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
+</body>
+
 </html>
