--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
     <!--Metadatos | Metadata-->
     <meta charset="utf-8" />
     <meta name="author" content="SiegBoss" />
@@ -11,37 +12,36 @@
     <title>Regalo</title>
     <!--Icono | Icon-->
     <link rel="icon" type="image/x-icon" href="images/logo_willy.png" />
-    <!-- Enlazar a Bootstrap | Link to Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <!--Enklazar CSS Estilo | Link CSS Style-->
     <link rel="stylesheet" type="text/css" href="style/index.css" />
+    <!--Tipografias | Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
     <!--Contenedor principal | Main container-->
-    <div class="main_container">
+    <div class="main-container">
+
         <!--Contenedor del texto Hola | Container of the text Hola-->
-        <div class="text_hi">
-            <span class="text_h">H</span>
-            <span class="text_o">O</span>
-            <span class="text_l">L</span>
-            <span class="text_a">A</span>
+        <div class="text-hi">
+            <span class="text-h">H</span>
+            <span class="text-o">O</span>
+            <span class="text-l">L</span>
+            <span class="text-a">A</span>
         </div>
+
         <!--Contenedor de texto | Text container-->
         <p class="text">Tengo un regalo para ti!!</p>
+
         <!--Boton | Button-->
         <button class="button" onclick="location.href='pages/flowers.html'">
             Click aquí
         </button>
+
     </div>
-
-    <!--Enlazar a Bootstrap | Link to Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-
 </body>
-
 </html>
