--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Titulo | Title-->
     <title>Regalo</title>
     <!--Icono | Icon-->
-    <link rel="icon" type="image/x-icon" href="images/logo_willy.png" />
+    <link rel="icon" type="image/x-icon" href="./images/logo_willy.png" />
     <!--Enklazar CSS Estilo | Link CSS Style-->
     <link rel="stylesheet" type="text/css" href="style/index.css" />
     <!--Tipografias | Fonts-->
@@ -25,7 +25,6 @@
 
     <!--Contenedor principal | Main container-->
     <div class="main-container">
-
         <!--Contenedor del texto Hola | Container of the text Hola-->
         <div class="text-hi">
             <span class="text-h">H</span>
@@ -33,15 +32,13 @@
             <span class="text-l">L</span>
             <span class="text-a">A</span>
         </div>
-
         <!--Contenedor de texto | Text container-->
         <p class="text">Tengo un regalo para ti!!</p>
-
         <!--Boton | Button-->
-        <button class="button" onclick="location.href='pages/flowers.html'">
+        <button class="button" onclick="location.href='./pages/flowers/flowers.html'">
             Click aquí
         </button>
-
     </div>
+
 </body>
 </html>
