--- a/pages/flowers/flowers.html
+++ b/pages/flowers/flowers.html
@@ -10,9 +10,9 @@
     <!--Titulo | Title-->
     <title>Flores</title>
     <!--Icono | Icon-->
-    <link rel="icon" type="image/x-icon" href="../images/logo_willy.png" />
+    <link rel="icon" type="image/x-icon" href="./images/logo_willy.png" />
     <!--Enklazar CSS Estilo | Link CSS Style-->
-    <link rel="stylesheet" type="text/css" href="../style/flowers.css" />
+    <link rel="stylesheet" type="text/css" href="./style/flowers.css" />
 </head>
 
 <body>
